# Desarrollo-de-Aplicaciones-Moviles

./: LICENSE  README.md
Laboratorio01/: Inciso B.kt  Inciso C.kt
Laboratorio03/app/: build.gradle
Laboratorio04/: README.md  default.nix  init.sql
Laboratorio04/AndroidApp/app/: build.gradle
Laboratorio04/AndroidApp/app/src/main/: AndroidManifest.xml
Laboratorio04/AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Laboratorio04/backend/: Cargo.toml  testCommands
Laboratorio04/backend/src/: lib.rs  main.rs
Laboratorio05/: README.md
Laboratorio05/app/: build.gradle
Laboratorio05/app/src/main/: AndroidManifest.xml
Laboratorio05/gradle/wrapper/: gradle-wrapper.properties
Laboratorio06/: README.md
Laboratorio06/app/: build.gradle
Laboratorio06/app/src/main/: AndroidManifest.xml
Laboratorio06/gradle/wrapper/: gradle-wrapper.properties
Laboratorio11/: README.md  settings.gradle
Laboratorio11/app/: build.gradle
Laboratorio11/app/src/main/: AndroidManifest.xml
Laboratorio11/app/src/main/res/values/: strings.xml
Laboratorio11/gradle/wrapper/: gradle-wrapper.properties
Laboratorio12/: README.md  settings.gradle
Laboratorio12/app/: build.gradle
Laboratorio12/app/src/main/: AndroidManifest.xml
Laboratorio12/app/src/main/res/values/: strings.xml
Laboratorio12/gradle/wrapper/: gradle-wrapper.properties
TicTacToe/app/: build.gradle
TicTacToe/app/src/main/res/layout/: fragment_game.xml  fragment_main_menu.xml
TicTacToe/app/src/main/res/navigation/: nav_graph.xml
TicTacToe/gradle/wrapper/: gradle-wrapper.properties
(+47 files in other folders)
